--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,24 +9,20 @@
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
     <div class="jumbotron">
         <h1>One More</h1>
-        <p class="lead">회원 기능</p>
-        <p>
-            <a class="btn btn-lg btn-secondary" href="/members/new">회원 가입</a>
-            <a class="btn btn-lg btn-secondary" href="/members">회원 목록</a>
-        </p>
         <p class="lead">운동 하기</p>
         <p>
-            <a class="btn btn-lg btn-primary" href="/workout">운동 진행</a>
+            <a class="btn btn-lg btn-primary" href="/workout">시작</a>
+            <a class="btn btn-lg btn-primary" href="/history">기록</a>
         </p>
         <p class="lead">운동 부위</p>
         <p>
-            <a class="btn btn-lg btn-info" href="/targets/new">운동부위 추가</a>
-            <a class="btn btn-lg btn-info" href="/targets">운동부위 목록</a>
+            <a class="btn btn-lg btn-info" href="/targets/new">추가</a>
+            <a class="btn btn-lg btn-info" href="/targets">목록</a>
         </p>
-        <p class="lead">운동</p>
+        <p class="lead">운동 종목</p>
         <p>
-            <a class="btn btn-lg btn-info" href="/exercises/new">운동 추가</a>
-            <a class="btn btn-lg btn-info" href="/exercises">운동 목록</a>
+            <a class="btn btn-lg btn-success" href="/exercises/new">추가</a>
+            <a class="btn btn-lg btn-success" href="/exercises">목록</a>
         </p>
 
     </div>
