--- a/src/main/resources/templates/workout.html
+++ b/src/main/resources/templates/workout.html
@@ -11,15 +11,14 @@
         <button type="button" class="btn btn-lg btn-success" data-toggle="modal" data-target="#addSetModal">
             세트 추가
         </button>
-        <p class="lead">현재 운동</p>
             <table id="settable" class="table table-striped">
                 <thead>
                 <tr>
-                    <th>운동 명칭</th>
-                    <th>운동 부위</th>
-                    <th>운동 횟수</th>
-                    <th>운동 무게</th>
-                    <th>기록 하기</th>
+                    <th style="width: 25%">운동 명칭</th>
+                    <th style="width: 25%">운동 부위</th>
+                    <th style="width: 20%">운동 횟수</th>
+                    <th style="width: 20%">운동 무게</th>
+                    <th style="width: 10%">기록</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -38,7 +37,6 @@
                 </tr>
                 </tbody>
             </table>
-        <p class="lead">템플릿 관리</p>
         <p>
             <a class="btn btn-info" data-toggle="modal" data-target="#selectTemplateModal" onclick="selectTemplate()">운동 템플릿 불러오기</a>
             <a class="btn btn-info" data-toggle="modal" data-target="#saveTemplateModal">운동 템플릿 저장</a>
