Feat(view): Add logOutButton.html
and Add the button to bodyHeader.html

--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -5,4 +5,5 @@
         <li><a href="/">Home</a></li>
     </ul>
     <a href="/"><h3 class="text-muted">One More</h3></a>
+    <div th:replace="fragments/logOutButton :: logOutButton" />
 </div>
