--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader" />
+    <div th:replace="fragments/nonLogInBodyHeader :: nonLogInBodyHeader" />
     <div class="jumbotron">
         <h1>One More</h1>
         <p class="lead">Log in</p>
