--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/header :: header" />
 <body>
 <div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader"/>
+    <div th:replace="fragments/nonLogInBodyHeader :: nonLogInBodyHeader"/>
     <form role="form">
         <div class="form-group">
             <label for="email"><b>Email</b></label>
